@@ -11,7 +11,8 @@
 #customize-control-smartline_control_post_images,
 #customize-control-smartline_control_postmeta_headline,
 #customize-control-smartline_control_post_footer_headline,
-#customize-control-smartline_control_slider_activated {
+#customize-control-smartline_control_slider_activated,
+#customize-control-smartline_theme_options-slider_speed {
 	margin-top: 16px;
 }
 #customize-control-smartline_control_featured_posts_header,
