@@ -8,9 +8,10 @@
  */
 
 // Passing Variables to Featured Content Slider ( js/slider.js)
-add_action('wp_enqueue_scripts', 'smartline_custom_jscript_slider');
+add_action( 'wp_enqueue_scripts', 'smartline_custom_jscript_slider' );
 
-if ( ! function_exists( 'smartline_custom_jscript_slider' ) ):
+if ( ! function_exists( 'smartline_custom_jscript_slider' ) ) :
+
 function smartline_custom_jscript_slider() { 
 	
 	// Get Theme Options from Database
@@ -20,14 +21,13 @@ function smartline_custom_jscript_slider() {
 	$params = array();
 	
 	// Define Slider Animation
-	if( isset($theme_options['slider_animation']) ) :
-		$params['animation'] = esc_js($theme_options['slider_animation']);
-	endif;
+	$params['animation'] = $theme_options['slider_animation'];
+	
+	// Define Slider Speed
+	$params['speed'] = $theme_options['slider_speed'];
 	
 	// Passing Parameters to Javascript
 	wp_localize_script( 'smartline-lite-jquery-frontpage_slider', 'smartline_slider_params', $params );
 }
+
 endif;
-
-
-?>
