@@ -103,7 +103,7 @@ function smartline_customize_register_slider_settings( $wp_customize ) {
 	
 	// Add Slider Animation Setting
 	$wp_customize->add_setting( 'smartline_theme_options[slider_animation]', array(
-        'default'           => 'horizontal',
+        'default'           => 'slide',
 		'type'           	=> 'option',
         'transport'         => 'refresh',
         'sanitize_callback' => 'smartline_sanitize_slider_animation'
@@ -117,12 +117,33 @@ function smartline_customize_register_slider_settings( $wp_customize ) {
 		'priority' => 9,
 		'active_callback' => 'smartline_slider_activated_callback',
         'choices'  => array(
-            'horizontal' => esc_html__( 'Slide Effect', 'smartline-lite' ),
+            'slide' => esc_html__( 'Slide Effect', 'smartline-lite' ),
             'fade' => esc_html__( 'Fade Effect', 'smartline-lite' )
 			)
 		)
 	);
 	
+	// Add Setting and Control for Slider Speed
+	$wp_customize->add_setting( 'smartline_theme_options[slider_speed]', array(
+        'default'           => 7000,
+		'type'           	=> 'option',
+        'transport'         => 'refresh',
+        'sanitize_callback' => 'absint'
+		)
+	);
+    $wp_customize->add_control( 'smartline_theme_options[slider_speed]', array(
+        'label'    => esc_html__( 'Slider Speed (in ms)', 'smartline-lite' ),
+        'section'  => 'smartline_section_slider',
+        'settings' => 'smartline_theme_options[slider_speed]',
+        'type'     => 'number',
+		'active_callback' => 'smartline_slider_activated_callback',
+		'priority' => 10,
+		'input_attrs' => array(
+			'min'   => 1000,
+			'step'  => 100,
+		),
+		)
+	);
+	
+	
 }
-
-?>
