@@ -5,6 +5,7 @@ Smartline Lite Changelog
 Version 1.3.5
 -----------------------------------
 [updated] flexlider to version 2.6.0
+[added] slider speed setting to Customizer
 
 Version 1.3.4
 -----------------------------------
